--- a/styles/style.css
+++ b/styles/style.css
@@ -296,3 +296,13 @@ a:active {
     border: solid black 1px;
 
 }
+.bytcoin {
+     color: gold;
+    margin-top: 15px;
+
+}
+.coin {
+    width: 20px;
+   
+    
+}
