--- a/styles/style.css
+++ b/styles/style.css
@@ -296,13 +296,11 @@ a:active {
     border: solid black 1px;
 
 }
-.bytcoin {
-     color: gold;
-    margin-top: 15px;
 
+.bytcoin {
+    color: gold;
 }
+
 .coin {
-    width: 20px;
-   
-    
+    width: 20px !important;
 }
