--- a/styles/style.css
+++ b/styles/style.css
@@ -100,6 +100,14 @@ a:active {
     padding-right: 0.9em !important;
 }
 
+.btn-opret {
+    color: white !important;
+    background-color: #683ba3;
+    border-color: #683ba3;
+    padding-left: 0.9em !important;
+    padding-right: 0.9em !important;
+}
+
 .btn-registrer:hover,
 .btn-registrer:active {
     background-color: #271e62;
@@ -287,9 +295,22 @@ a:active {
     height=80vh;
 }
 
-.fa-exchange-alt {
+.modal-popup-trans {
+    width=100%;
+    max-height: 50vh !important;
+}
+
+.exchange {
     padding-top: 200px;
-    font-size: 10em;
+    font-size: 3em;
+    text-align: center;
+} 
+
+.exchange-2 {
+    padding-top: 5px;
+    padding-bottom: 5px;
+    font-size: 3em;
+    text-align: center;
 }
 
 .img_upload {
