--- a/styles/style.css
+++ b/styles/style.css
@@ -194,7 +194,7 @@ a:active {
 }
 
 .profil_container {
-    padding-top: 10%;
+    padding-top: 70px;
 }
 
 .icon-navbar {
@@ -304,7 +304,7 @@ a:active {
     padding-top: 200px;
     font-size: 3em;
     text-align: center;
-} 
+}
 
 .exchange-2 {
     padding-top: 5px;
@@ -324,4 +324,8 @@ a:active {
 
 .coin {
     width: 20px !important;
+}
+
+.pop-up-image {
+    max-height: 60vh !important;
 }
